# redis-team3

./: .gitignore  ANTIGRAVITY_DEMO_REPORT_PROMPT.md  ANTIGRAVITY_VIS_PROMPT.md  DEMO_REPORT.md  PROJECT_PLAN.md  README.md  REPORT.md  SPEC.md  TICKETING_SERVICE.md  TTT.PY  USAGE.md  VISUALIZATION_REPORT.md  client.py  command.py  main.py  presentation_dashboard.html  pyproject.toml  requirements.txt  run_mini_redis_local.py  run_ticketing_service_local.py  server.py  store.py  기능별_코드_위치맵.md  수요코딩회_요구사항_체크리스트.md  시연 시나리오.md  아키텍처_다이어그램.md
back-end/: .gitignore  api_server.py  main.py
docs/: full-test-guide-ko.md  live-load-test-report.md
experiments/: __init__.py
experiments/traffic/: README.md  __init__.py  (+1 more)
front-end/: virtual_redis_gui.py
front-end-simulation/: app.js  index.html  styles.css
mini_redis/: __init__.py  cli.py  hash_table.py  persistence.py  protocol.py  server.py  store.py
scripts/: load_test.py
tests/: __init__.py  support.py  test_cli.py  test_concurrency.py  test_hash_table.py  test_persistence.py  test_protocol.py  test_protocol_basic.py  test_protocol_counter.py  test_protocol_expiration.py  test_protocol_hash.py  test_protocol_invalidation.py  test_protocol_locking.py  test_protocol_rate_limit.py  test_protocol_resp.py  test_protocol_setnx.py  test_protocol_sets.py  test_protocol_sorted_set.py  test_store.py  test_store_expiration.py  test_ticketing_api.py  test_ticketing_scenarios.py  test_ticketing_service.py
ticketing_service/: __init__.py  pages.py  redis_client.py  server.py  service.py
webapp/: app.js  index.html  styles.css
(+21 files in other folders)
